# scf-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
dashboard/: app.py
dashboard/components/: irr_chart.py  nl_panel.py  risk_table.py
data/processed/: dataco_clean.parquet  features.parquet
scf_agent/: config.py
scf_agent/agent/: memory.py  nl_agent.py  tools.py
scf_agent/api/: main.py  schemas.py
scf_agent/api/routers/: agent.py  decisions.py  suppliers.py
scf_agent/models/: risk_scorer.py
scf_agent/models/artifacts/: risk_scorer_vv1.joblib
scf_agent/optimization/: irr_engine.py
scf_agent/pipeline/: features.py  ingest.py  preprocess.py
tests/: test_agent_tools.py  test_api.py  test_dashboard.py  test_irr_engine.py  test_pipeline.py  test_risk_scorer.py
