[project]
name = "scf-agent"
version = "0.1.0"
description = "Supply Chain Finance AI Agent system built with LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SCF Agent Team" },
]
license = { text = "MIT" }
keywords = ["supply-chain-finance", "langchain", "langgraph", "ai-agent", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "joblib",
    "httpx",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "streamlit",
    "plotly",
    "python-dotenv",
    "langchain-groq",
    "langgraph",
    "langchain-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scf_agent", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
